--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
       </nav>
 		
 
-	<!--aaa-->
-	<hr>	
-	  <div class="row" >
-	  	<div class="col-xs-4 center-xs" >
-	  			<button class="mdc-icon-button material-icons">add_box</button>
-	  		
+	<!--aaa-->		
+		<div class="col-xs-12" >
+	  		<div class="row">
+				<div class="col-xs-4 center-xs" >
+					<button class="mdc-icon-button material-icons">add_box</button>
+				</div>
+				<div class="col-xs-4 center-xs" >
+					<button class="mdc-icon-button material-icons">folder_open</button>
+				</div>
+	  		</div>
 	  	</div>
-	  	<div class="col-xs-4 center-xs" >
-	  		<button class="mdc-icon-button material-icons">folder_open</button>
-	  	</div>
-	  </div>	
-	  <!--aaa-->	
+	<!--aaa-->	
 
     </div>
   </aside>
