--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Editor</title>
 <meta charset="utf-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
@@ -15,12 +16,20 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/font.css">
 <style>
-	.CodeMirror {
-    font-size: 18px;
-}
+	.CodeMirror{font-size: 18px;}
+  body,html{
+    width:100%;
+    height:100%;
+    background:#eee;
+    display:flex;
+    flex-direction:column;
+  }
 </style>
 </head>
 <body>
+
+
+
 
  <aside class="mdc-drawer mdc-drawer--modal" style="z-index:12;">
     <div class="mdc-drawer__content">
@@ -40,7 +49,7 @@
       </nav>
 		
 
-	<!--aaa-->		
+
 		<div class="col-xs-12" >
 	  		<div class="row">
 				<div class="col-xs-4 center-xs" >
@@ -51,13 +60,16 @@
 				</div>
 	  		</div>
 	  	</div>
-	<!--aaa-->	
+
 
     </div>
   </aside>
   <div class="mdc-drawer-scrim" style="z-index:11;" ></div>
 
-<header id="app-bar" class="mdc-top-app-bar  mdc-top-app-bar--fixed  " style="z-index:10;">
+
+
+
+<header id="app-bar" class="mdc-top-app-bar  mdc-top-app-bar--fixed" style="z-index:10;">
   <div class="mdc-top-app-bar__row">
     <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
       <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>
@@ -71,36 +83,32 @@
     </section>
   </div>
 </header>
-<div class="mdc-top-app-bar--fixed-adjust" >
-	
+<div class="mdc-top-app-bar--fixed-adjust" style="background:red;height:100%;overflow:auto;" >
+  <textarea id="code" ></textarea>
 </div>
-
-<textarea id="code" ></textarea>
-
 <script src="node_modules/material-components-web/dist/material-components-web.min.js" ></script>
 <script src="node_modules/codemirror/lib/codemirror.js"></script>
 <script src="node_modules/codemirror/mode/javascript/javascript.js" ></script>
 <script src="node_modules/codemirror/addon/display/fullscreen.js" ></script>
-
 <script>
 
- var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
     lineNumbers: true,
     mode: "javascript",
-    fullscreen:true,
+    fullscreen:false,
     theme:"monokai"
- });
- editor.setSize("100%","100%");
+});
 
+editor.setSize("100%","100%");
 
 const drawer = mdc.drawer.MDCDrawer.attachTo(document.querySelector('.mdc-drawer'));
- const topAppBar = mdc.topAppBar.MDCTopAppBar.attachTo(document.getElementById('app-bar'));
+
+const topAppBar = mdc.topAppBar.MDCTopAppBar.attachTo(document.getElementById('app-bar'));
+
 topAppBar.listen('MDCTopAppBar:nav', () => {
     drawer.open = true;
 });
 
-
 </script>
-
 </body>
 </html>
